tests/fail-dep/libc/libc_epoll_block_two_thread.stderr
error: deadlock: the evaluated program deadlocked
   |
   = note: the evaluated program deadlocked
   = note: (no span available)
   = note: BACKTRACE on thread `unnamed-ID`:
   = note: thread `unnamed-ID` was spawned by thread `main`
   = note: inside `std::sys::pal::PLATFORM::thread::Thread::new` at RUSTLIB/std/src/sys/pal/PLATFORM/thread.rs:LL:CC
   = note: inside `std::thread::Builder::spawn_unchecked_::<'_, {closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::Builder::spawn_unchecked::<{closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::Builder::spawn::<{closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::spawn::<{closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
note: inside `main`
  --> tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC
   |
LL |       let thread2 = spawn(move || {
   |  ___________________^
LL | |         check_epoll_wait::<TAG>(epfd, &[(expected_event, expected_value)], -1);
LL | |     });
   | |______^

error: deadlock: the evaluated program deadlocked
  --> RUSTLIB/std/src/sys/pal/PLATFORM/thread.rs:LL:CC
   |
LL |         let ret = unsafe { libc::pthread_join(id, ptr::null_mut()) };
   |                                                                  ^ the evaluated program deadlocked
   |
   = note: BACKTRACE:
   = note: inside `std::sys::pal::PLATFORM::thread::Thread::join` at RUSTLIB/std/src/sys/pal/PLATFORM/thread.rs:LL:CC
   = note: inside `std::thread::JoinInner::<'_, ()>::join` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::JoinHandle::<()>::join` at RUSTLIB/std/src/thread/mod.rs:LL:CC
note: inside `main`
  --> tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC
   |
LL |     thread1.join().unwrap();
   |     ^^^^^^^^^^^^^^

error: deadlock: the evaluated program deadlocked
  --> tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC
   |
LL |         check_epoll_wait::<TAG>(epfd, &[(expected_event, expected_value)], -1);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program deadlocked
   |
   = note: BACKTRACE on thread `unnamed-ID`:
   = note: inside closure at tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC
   = note: thread `unnamed-ID` was spawned by thread `main`
   = note: inside `std::sys::pal::PLATFORM::thread::Thread::new` at RUSTLIB/std/src/sys/pal/PLATFORM/thread.rs:LL:CC
   = note: inside `std::thread::Builder::spawn_unchecked_::<'_, {closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::Builder::spawn_unchecked::<{closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::Builder::spawn::<{closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::spawn::<{closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
note: inside `main`
  --> tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC
   |
LL |       let thread1 = spawn(move || {
   |  ___________________^
LL | |         check_epoll_wait::<TAG>(epfd, &[(expected_event, expected_value)], -1);
LL | |
LL | |     });
   | |______^

error: deadlock: the evaluated program deadlocked
   |
   = note: the evaluated program deadlocked
   = note: (no span available)
   = note: BACKTRACE on thread `unnamed-ID`:
   = note: thread `unnamed-ID` was spawned by thread `main`
   = note: inside `std::sys::pal::PLATFORM::thread::Thread::new` at RUSTLIB/std/src/sys/pal/PLATFORM/thread.rs:LL:CC
   = note: inside `std::thread::Builder::spawn_unchecked_::<'_, {closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::Builder::spawn_unchecked::<{closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::Builder::spawn::<{closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
   = note: inside `std::thread::spawn::<{closure@tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC}, ()>` at RUSTLIB/std/src/thread/mod.rs:LL:CC
note: inside `main`
  --> tests/fail-dep/libc/libc_epoll_block_two_thread.rs:LL:CC
   |
LL |       let thread3 = spawn(move || {
   |  ___________________^
LL | |         let data = "abcde".as_bytes().as_ptr();
LL | |         let res = unsafe { libc::write(fds[1], data as *const libc::c_void, 5) };
LL | |         assert_eq!(res, 5);
LL | |     });
   | |______^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 4 previous errors

